--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
+    "open": "webpack-dev-server --open",
     "lint": "eslint src/**/**; exit 0",
     "lint-fix": "eslint src/**/** --fix; exit 0"
   },
